--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
     "express": "^4.17.1",
+    "json-server": "^0.17.0",
     "mongoose": "^6.0.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -43,8 +44,11 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.5.0",
     "protractor": "^7.0.0",
+    "ts-loader": "^9.2.6",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "webpack": "^5.64.2",
+    "webpack-cli": "^4.9.1"
   }
 }
