--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~12.2.13",
     "body-parser": "^1.19.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.1",
     "express": "^4.17.1",
     "json-server": "^0.17.0",
     "mongoose": "^6.0.13",
