Add ES6 support

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cms-app",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -27,6 +28,7 @@
     "mongoose": "^6.0.13",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "uuid": "^8.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
